[removed] autoplay and loop

--- a/gymnastika/cviceni.html
+++ b/gymnastika/cviceni.html
@@ -153,7 +153,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvp1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -187,7 +187,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvp2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -221,7 +221,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvp3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -255,7 +255,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvp4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -290,7 +290,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvp5.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -323,7 +323,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvp6.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -357,7 +357,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvp7.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -391,7 +391,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvz1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -425,7 +425,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvz2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -459,7 +459,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvz3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -493,7 +493,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/kvz4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -527,7 +527,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/ps1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -561,7 +561,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/ps2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -596,7 +596,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/ps3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -630,7 +630,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/ps4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -664,7 +664,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/ps5.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -697,7 +697,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/vp1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -730,7 +730,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/vp2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -763,7 +763,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/vp3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -796,7 +796,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/vp4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -830,7 +830,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/vp5.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -863,7 +863,7 @@
               </dl>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/vp6.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
