--- a/plochonozi/cviceni.html
+++ b/plochonozi/cviceni.html
@@ -157,7 +157,7 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/p1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -199,7 +199,7 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/p2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -241,7 +241,7 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/p3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -284,7 +284,7 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/p4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -326,7 +326,7 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/p5.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -368,7 +368,7 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/p6.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -410,7 +410,7 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/p7.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -456,7 +456,7 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/p8.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -497,7 +497,7 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/p9.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -538,7 +538,7 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/p10.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -579,7 +579,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n1.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -622,7 +622,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n2.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -664,7 +664,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n3.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -705,7 +705,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n4.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -746,7 +746,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n5.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -787,7 +787,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n6.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -827,7 +827,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n7.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -868,7 +868,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n8.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -909,7 +909,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n9.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -954,7 +954,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n10.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -999,7 +999,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n11.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -1039,7 +1039,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n12.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -1081,7 +1081,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n13.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -1123,7 +1123,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n14.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
@@ -1165,7 +1165,7 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+              <video class="rounded img-fluid float-right" controls muted>
                 <source src="videos/n15.mp4" type="video/mp4">
                 Váš prohlížeč nepodporuje MP4 soubory.
               </video>
