plochonozi [fixed typo]

--- a/plochonozi/diagnostika.html
+++ b/plochonozi/diagnostika.html
@@ -79,7 +79,7 @@
 					<hr class="my-4">
 					<p class="text-justify">Součástí toho modulu je diagnostika stavu nožní klenby pomocí metody
 						Chippaux-Šmiřák. Základem pro diagnostiku nožní klenby pomocí metody Chippaux-Šmiřák je
-						<mark>otisk chodidla</mark> (plantograf). Tuto metodu lze využít s použitím digitálních
+						<mark>otisk chodidla</mark> (plantogram). Tuto metodu lze využít s použitím digitálních
 						technologií (mobil, tablet, PC), tak i bez nich.</p>
 					<h3 class="h4 pt-5" id="item-2">Plantogram (otisk chodidla)</h3>
 					<hr class="my-4">
